# localcider_table_annotator

./: Makefile  README.md  environment.yml  pyproject.toml
example/: sequences.csv
example/cli/: run.sh  sequences_with_localcider.csv
example/python/: annotate_table.ipynb
localcider_table_annotator/: __init__.py  localcider_table_annotator.py
localcider_table_annotator/tests/: test_localcider_table_annotator.py
